# aeolus-rs

./: .gitignore  Cargo.toml  README.md  makefile  test.py
.github/workflows/: rust.yml
aeolus/: Cargo.toml
aeolus/src/: default.toml  main.rs  prep.rs  settings.rs
common/src/: lib.rs  number.rs  unit.rs  vector3.rs
examples/steady_flow/: steady_flow.aeolus  steady_flow.lua
examples/steady_flow/config/: units
gas/: Cargo.toml
gas/src/: lib.rs
grid/: Cargo.toml
grid/src/: cell.rs  geom_calc.rs  lib.rs  vertex.rs
lib/python/: Cargo.toml
lib/python/src/: block.rs
python/: Cargo.toml
python/src/: gas_model.rs  gas_state.rs  ideal_gas.rs  lib.rs
resources/defaults/: aeolus_defaults.toml
src/: lib.rs  main.rs
src/aeolus/: Cargo.toml
src/aeolus/examples/steady-flow/: prep.rhai
src/aeolus/src/: cli.rs  lib.rs  logging.rs  lua.rs  main.rs  prep.rs  settings.rs
src/common/: Cargo.toml
src/common/src/: unit.rs  vector3.rs
src/config/: cli.rs  mod.rs  settings.rs
src/finite_volume/: Cargo.toml
src/finite_volume/src/: cells.rs  flow.rs  fluid_block.rs  fluid_block_io.rs  interface.rs  lib.rs  util.rs
src/finite_volume/src/boundary_conditions/: mod.rs
src/gas/: Cargo.toml  gas_model.rs  gas_state.rs  ideal_gas.rs  mod.rs
src/gas/src/: flow_state.rs  gas_model.rs  gas_state.rs  ideal_gas.rs  lib.rs
src/geometry/: cell.rs  geom_calc.rs  interface.rs  mod.rs  vertex.rs
src/grid/: Cargo.toml  block.rs  cell.rs  geom_calc.rs  interface.rs  mod.rs  su2.rs  vertex.rs
src/grid/src/: block.rs  cell.rs  geom_calc.rs  interface.rs  lib.rs  su2.rs  vertex.rs
src/grid/tests/: block_io.rs
src/numerical_methods/: mod.rs  number.rs  unit.rs
src/solvers/: explicit.rs  mod.rs
src/solvers/src/: lib.rs
src/util/: mod.rs  python_lib.rs  vector3.rs
tests/: block_io.rs
