[package]
name = "aeolus-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "aeolus_rs"
crate-type = ["cdylib"]

[dependencies]
num-complex = "0.4"
pyo3 = { version = "0.17", features = ["multiple-pymethods", "extension-module"] }
ndarray = "0.15"
ndarray-linalg = { version="0.16", features = ["openblas-system"]}
serde = "1.0"
serde_derive = "1.0"
config = "0.13"
