[package]
name = "aeolus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
config = "0.13"
pyo3 = { version = "0.17", features = ["auto-initialize"]}
common = {path = "../common"}
