[package]
name = "aeolus"
version = "0.1.0"
edition = "2021"

[lib]
name = "aeolus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
config = "0.13"
rlua = "0.19"
common = {path = "../common"}
