[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
ndarray-linalg = { version="0.16", features = ["openblas-system"]}
rlua = "0.19"
serde = "1.0"
serde_derive = "1.0"
